[package]
name = "ethereyum"
version = "0.1.0"
authors = ["Etherswap.io <admin@etherswap.io>"]

[dependencies]
crossbeam = { version = "0.4.0", git = "https://github.com/crossbeam-rs/crossbeam.git" }
crossbeam-channel = "0.1"
crossbeam-deque = "0.3.0"
error-chain = "0.11.0"
ethereum-models = { git = "https://github.com/etherswap/ethereum-models.git" }
fixed-hash = "0.1.2"
fnv = "1.0.3"
futures = "0.1"
futures-cpupool = "0.1"
jsonrpc-core = "8.0"
log = "0.4"
parking_lot = "0.5.3"
pretty_env_logger = "0.2"
reqwest = "0.8.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1.1"
url = "1.6.0"
ws = "0.7.3"

[dev-dependencies]
web3 = { version = "0.2.0", git = "https://github.com/tomusdrw/rust-web3.git" }